--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=demo
 
-server.port = 8095
+server.port = 443
+server.ssl.key-store=classpath:ssl/keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=123456
+
